// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`html render bbcode string > render @user 1`] = `
Array [
  <a
    className="l"
    href="/user/1"
    style={Object {}}
  >
    @sai
  </a>,
  <a
    className="l"
    href="/user/a_little"
    style={Object {}}
  >
    @a_little
  </a>,
]
`;

exports[`html render bbcode string > render align 1`] = `
Array [
  <p
    style={
      Object {
        "textAlign": "right",
      }
    }
  >
    右
  </p>,
  <p
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    中
  </p>,
  <p
    style={
      Object {
        "textAlign": "left",
      }
    }
  >
    左
  </p>,
]
`;

exports[`html render bbcode string > render code 1`] = `
Array [
  <pre
    style={Object {}}
  >
    <React.Fragment>
      ss[b]加粗
      <br />
      换行了[/b](bgm38) [/fafa [code]
    </React.Fragment>
  </pre>,
]
`;

exports[`html render bbcode string > render color 1`] = `
Array [
  <React.Fragment>
    我是
    <br />
    
  </React.Fragment>,
  <span
    style={
      Object {
        "color": "red",
      }
    }
  >
    彩
  </span>,
  <span
    style={
      Object {
        "color": "green",
      }
    }
  >
    色
  </span>,
  <span
    style={
      Object {
        "color": "blue",
      }
    }
  >
    的
  </span>,
  <span
    style={
      Object {
        "color": "orange",
      }
    }
  >
    哟
  </span>,
  "。",
]
`;

exports[`html render bbcode string > render color size 1`] = `
Array [
  <span
    style={
      Object {
        "color": "red",
      }
    }
  >
    <span
      style={
        Object {
          "fontSize": "18px",
          "lineHeight": "18px",
        }
      }
    >
      一般
      <strong
        style={Object {}}
      >
        粗
      </strong>
      <React.Fragment>
        
        <br />
           
      </React.Fragment>
      <span
        style={
          Object {
            "textDecoration": "line-through",
          }
        }
      >
        删除
      </span>
    </span>
  </span>,
]
`;

exports[`html render bbcode string > render img 1`] = `
Array [
  <React.Fragment>
    存放于其他网络服务器的图片：
    <br />
    
  </React.Fragment>,
  <img
    className="code"
    src="http://chii.in/img/ico/bgm88-31.gif"
    style={Object {}}
  />,
]
`;

exports[`html render bbcode string > render mask 1`] = `
Array [
  "我是",
  <span
    className="bgm-mask"
    style={Object {}}
  >
    马赛克文字
  </span>,
]
`;

exports[`html render bbcode string > render quote 1`] = `
Array [
  <div
    className="quote"
    style={Object {}}
  >
    <q
      style={Object {}}
    >
      ss
      <strong
        style={Object {}}
      >
        加粗
      </strong>
    </q>
  </div>,
]
`;

exports[`html render bbcode string > render size 1`] = `
Array [
  <span
    style={
      Object {
        "fontSize": "10px",
        "lineHeight": "10px",
      }
    }
  >
    不同
  </span>,
  <span
    style={
      Object {
        "fontSize": "14px",
        "lineHeight": "14px",
      }
    }
  >
    大小的
  </span>,
  <span
    style={
      Object {
        "fontSize": "18px",
        "lineHeight": "18px",
      }
    }
  >
    文字
  </span>,
  "效果也可实现。",
]
`;

exports[`html render bbcode string > render sticker 1`] = `
Array [
  <img
    alt="(bgm38)"
    smileid="54"
    src="https://lain.bgm.tv/img/smiles/tv/15.gif"
    style={Object {}}
  />,
  <img
    alt="(bgm23)"
    smileid="39"
    src="https://lain.bgm.tv/img/smiles/bgm/23.gif"
    style={Object {}}
  />,
  <img
    alt="(=///=)"
    smileid="13"
    src="https://lain.bgm.tv/img/smiles/13.gif"
    style={Object {}}
  />,
]
`;

exports[`html render bbcode string > render url 1`] = `
Array [
  "Bangumi 番组计划: ",
  <a
    className="bgm-link"
    href="http://chii.in/"
    style={Object {}}
  >
    http://chii.in/
  </a>,
]
`;

exports[`html render bbcode string > render url 2`] = `
Array [
  <React.Fragment>
    带文字说明的网站链接：
    <br />
    
  </React.Fragment>,
  <a
    className="bgm-link"
    href="http://chii.in"
    style={Object {}}
  >
    Bangumi 番组计划
  </a>,
]
`;

exports[`html render bbcode string > should render br 1`] = `
Array [
  <React.Fragment>
    
    <br />
        又名：CUP人生茶话会
    <br />
    
    <br />
        1.上班的时候想要回家的。
    <br />
        2.学校课上打瞌睡的。
  </React.Fragment>,
  <img
    alt="(bgm38)"
    smileid="54"
    src="https://lain.bgm.tv/img/smiles/tv/15.gif"
    style={Object {}}
  />,
  <React.Fragment>
    
    <br />
        2.学校课上打瞌睡的。
  </React.Fragment>,
  <img
    alt="(bgm11)"
    smileid="27"
    src="https://lain.bgm.tv/img/smiles/bgm/11.gif"
    style={Object {}}
  />,
  <React.Fragment>
    
    <br />
        2.学校课上打瞌睡的。
  </React.Fragment>,
  <img
    alt="(bgm12)"
    smileid="28"
    src="https://lain.bgm.tv/img/smiles/bgm/12.png"
    style={Object {}}
  />,
  <React.Fragment>
    
    <br />
    
    <br />
    
    <br />
        
  </React.Fragment>,
]
`;

exports[`html render bbcode string > should render sticker 1`] = `
Array [
  <img
    alt="(bgm01)"
    smileid="17"
    src="https://lain.bgm.tv/img/smiles/bgm/01.png"
    style={Object {}}
  />,
]
`;

exports[`html render bbcode string > should render sticker 2`] = `
Array [
  <img
    alt="(bgm38)"
    smileid="54"
    src="https://lain.bgm.tv/img/smiles/tv/15.gif"
    style={Object {}}
  />,
]
`;

exports[`html render bbcode string > should render sticker 3`] = `
Array [
  <img
    alt="(bgm11)"
    smileid="27"
    src="https://lain.bgm.tv/img/smiles/bgm/11.gif"
    style={Object {}}
  />,
]
`;

exports[`react render vnode > render boolean props node 1`] = `
<input
  disabled={true}
  style={Object {}}
  type="text"
/>
`;

exports[`react render vnode > render link 1`] = `
<a
  className="l test"
  href="http://chii.in/"
  rel="nofollow external noopener noreferrer"
  style={Object {}}
  target="_blank"
/>
`;

exports[`react render vnode > render mask 1`] = `
<span
  className="l"
  style={
    Object {
      "backgroundColor": "#555",
      "border": "1px solid #555",
      "color": "#555",
    }
  }
>
  <React.Fragment>
    文字
    <br />
    换行
  </React.Fragment>
</span>
`;

exports[`react render vnode > render multi style 1`] = `
<span
  className="l"
  style={
    Object {
      "fontSize": "18px",
      "lineHeight": "18px",
    }
  }
>
  <React.Fragment>
    文字
    <br />
    换行了
  </React.Fragment>
</span>
`;

exports[`react render vnode > render nest 1`] = `
<span
  style={
    Object {
      "fontSize": "18pt",
    }
  }
>
  <a
    className="l"
    href="http://chii.in/"
    style={Object {}}
  />
</span>
`;

exports[`react render vnode > render nest 2`] = `
<span
  style={
    Object {
      "color": "red",
    }
  }
>
  <span
    style={
      Object {
        "fontSize": "18pt",
      }
    }
  >
    <a
      className="l"
      href="http://chii.in/"
      style={Object {}}
    />
  </span>
</span>
`;

exports[`react render vnode > render pre children 1`] = `
<pre
  style={Object {}}
>
  <React.Fragment>
    文字
    <br />
    换行
  </React.Fragment>
</pre>
`;

exports[`react render vnode > render sticker node 1`] = `
<img
  alt="(bgm38)"
  smileid="38"
  sticker-id="38"
  style={Object {}}
/>
`;
